--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
       body {
         background-color: cornsilk;
@@ -103,7 +104,7 @@
         </div>
         <div class="box right-box">
           <a href="battle/index.html" style="margin-top: 20px">
-            <i id="player" class="fas fa-play"></i>
+            <i id="player" class="fa-solid fa-people-pulling"></i>
             <p>
               Bermain secara <br />
               berpasangan!
